# uplan

./: .gitignore  README.md  pyproject.toml  run.py
docs/: README_KR.md
uplan/: app.py  gui.py  gui_process.py  init.py  main.py  process.py  question.py
uplan/forms/: __init__.py
uplan/forms/dev/: plan.toml  todo.toml
uplan/forms/dev_kr/: plan.toml  todo.toml
uplan/models/: todo.py
uplan/static/: style.css
uplan/templates/: base.html  form.html  index.html  plan.html  todo.html
uplan/templates/dev_kr/: plan.toml  todo.toml
uplan/utils/: data.py  provider.py  text.py
